convolutional. cifar 10 dataset was excluded to github

--- a/11_feed_forward_net.ipynb
+++ b/11_feed_forward_net.ipynb
@@ -133,7 +133,6 @@
    "cell_type": "code",
    "execution_count": 17,
    "source": [
-    "\r\n",
     "model =NeuralNet(input_size,hidden_size,num_classes).to(device)\r\n",
     "\r\n",
     "criterion = nn.CrossEntropyLoss()\r\n",
@@ -143,10 +142,30 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Newer versions of PyTorch allows nn.Linear to accept N-D input tensor, the only constraint is that the last dimension of the input tensor will equal in_features of the linear layer."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<span style='color:cyan'>The linear transformation is then applied on the last dimension of the tensor.</span>"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<span style='color:cyan'>For instance, if in_features=5 and out_features=10 and the input tensor x has dimensions 2-3-5, then the output tensor will have dimensions 2-3-10.</span>"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "source": [
-    "\r\n",
     "n_total_steps = len(train_loader)\r\n",
     "for epoch in range(num_epochs):\r\n",
     "    for i, (images,labels)  in enumerate(train_loader):\r\n",
