ignore hymenoptera and explain normalize in 12

--- a/12_convolutional_NN.ipynb
+++ b/12_convolutional_NN.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "source": [
     "import torch\r\n",
     "import torch.nn as nn\r\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "source": [
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "source": [
     "#Hyper Parameter\r\n",
     "num_epochs = 10\r\n",
@@ -89,8 +89,29 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## **To change the rgb value ranging from 0 to 255, we need to normalize those tensor in the range of (-1,1) <span style='color:cyan'>because it is easy to change than the range of (0,1)</span>**"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## **We have rbg which means 3 channels. Pytorch let us to normalize the each channel separately. That's why we got 3 means and 3 std**"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## **If we want the range of (0,1), we have to calculate ourselves and fill them**"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "source": [
     "transforming = transforms.Compose([transforms.ToTensor(),transforms.Normalize((0.5,0.5,0.5),(0.5,0.5,0.5))])"
    ],
@@ -99,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "source": [
     "train_dataset = torchvision.datasets.CIFAR10(root='./dataset',train=True,download=True,transform=transforming)\r\n",
     "test_dataset = torchvision.datasets.CIFAR10(root='./dataset',train=False,download=True,transform=transforming)"
@@ -125,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "source": [
     "print(f'The shape of training dataset is {train_dataset.data.shape} and that of test dataset is {test_dataset.data.shape}')\r\n",
     "print(f'Type of data is {type(train_dataset.data)}')"
@@ -151,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "source": [
     "test_img = train_dataset.data[0]\r\n",
     "print(type(test_img))\r\n",
@@ -174,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "source": [
     "test_tensor = transforming(test_img)\r\n",
     "print(type(test_tensor))\r\n",
@@ -194,8 +215,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# <span style='color:cyan'>***Transform argument at cell [15] in train_dataset does not work until you call the DataLoader.***</span>"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "source": [
     "#back to pipeline\r\n",
     "train_loader = torch.utils.data.DataLoader(train_dataset,batch_size=batch_size,shuffle=True)\r\n",
@@ -213,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "source": [
     "classes = ('plane','car','bird','cat','deer','dog','frog','horse','ship','truck')"
    ],
@@ -229,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "source": [
     "class ConvNet(nn.Module):\r\n",
     "    def __init__(self,inputs_channel_size,outputs_channel_size,filter_size,pool_kernel_size):\r\n",
@@ -305,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "source": [
     "in_channel_size = 3 # rgb colors channels\r\n",
     "out_channel_size = 6 # anything you want\r\n",
@@ -317,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "source": [
     "model = ConvNet(inputs_channel_size=in_channel_size,\r\n",
     "                outputs_channel_size=out_channel_size,pool_kernel_size=pool_kernel_size,\r\n",
@@ -331,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "source": [
     "n_total_steps = len(train_loader)\r\n",
     "for epoch in range(num_epochs):\r\n",
@@ -351,79 +379,12 @@
     "        if (i+1)%2000 == 0:\r\n",
     "            print(f'Epoch {epoch+1}/{num_epochs},step {i+1}/{n_total_steps}, loss {loss.item():.3f}')"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Epoch 1/10,step 2000/12500, loss 2.362\n",
-      "Epoch 1/10,step 4000/12500, loss 2.302\n",
-      "Epoch 1/10,step 6000/12500, loss 2.297\n",
-      "Epoch 1/10,step 8000/12500, loss 2.276\n",
-      "Epoch 1/10,step 10000/12500, loss 2.293\n",
-      "Epoch 1/10,step 12000/12500, loss 2.254\n",
-      "Epoch 2/10,step 2000/12500, loss 1.790\n",
-      "Epoch 2/10,step 4000/12500, loss 1.713\n",
-      "Epoch 2/10,step 6000/12500, loss 1.931\n",
-      "Epoch 2/10,step 8000/12500, loss 1.333\n",
-      "Epoch 2/10,step 10000/12500, loss 1.828\n",
-      "Epoch 2/10,step 12000/12500, loss 1.701\n",
-      "Epoch 3/10,step 2000/12500, loss 1.985\n",
-      "Epoch 3/10,step 4000/12500, loss 1.139\n",
-      "Epoch 3/10,step 6000/12500, loss 0.691\n",
-      "Epoch 3/10,step 8000/12500, loss 2.052\n",
-      "Epoch 3/10,step 10000/12500, loss 1.847\n",
-      "Epoch 3/10,step 12000/12500, loss 1.286\n",
-      "Epoch 4/10,step 2000/12500, loss 1.077\n",
-      "Epoch 4/10,step 4000/12500, loss 2.243\n",
-      "Epoch 4/10,step 6000/12500, loss 0.777\n",
-      "Epoch 4/10,step 8000/12500, loss 1.768\n",
-      "Epoch 4/10,step 10000/12500, loss 1.585\n",
-      "Epoch 4/10,step 12000/12500, loss 1.576\n",
-      "Epoch 5/10,step 2000/12500, loss 1.084\n",
-      "Epoch 5/10,step 4000/12500, loss 0.812\n",
-      "Epoch 5/10,step 6000/12500, loss 1.037\n",
-      "Epoch 5/10,step 8000/12500, loss 1.045\n",
-      "Epoch 5/10,step 10000/12500, loss 1.444\n",
-      "Epoch 5/10,step 12000/12500, loss 1.142\n",
-      "Epoch 6/10,step 2000/12500, loss 0.963\n",
-      "Epoch 6/10,step 4000/12500, loss 1.192\n",
-      "Epoch 6/10,step 6000/12500, loss 1.352\n",
-      "Epoch 6/10,step 8000/12500, loss 2.003\n",
-      "Epoch 6/10,step 10000/12500, loss 1.060\n",
-      "Epoch 6/10,step 12000/12500, loss 1.401\n",
-      "Epoch 7/10,step 2000/12500, loss 1.381\n",
-      "Epoch 7/10,step 4000/12500, loss 0.958\n",
-      "Epoch 7/10,step 6000/12500, loss 1.432\n",
-      "Epoch 7/10,step 8000/12500, loss 1.375\n",
-      "Epoch 7/10,step 10000/12500, loss 0.926\n",
-      "Epoch 7/10,step 12000/12500, loss 1.057\n",
-      "Epoch 8/10,step 2000/12500, loss 0.837\n",
-      "Epoch 8/10,step 4000/12500, loss 1.614\n",
-      "Epoch 8/10,step 6000/12500, loss 1.058\n",
-      "Epoch 8/10,step 8000/12500, loss 1.186\n",
-      "Epoch 8/10,step 10000/12500, loss 1.139\n",
-      "Epoch 8/10,step 12000/12500, loss 1.112\n",
-      "Epoch 9/10,step 2000/12500, loss 0.863\n",
-      "Epoch 9/10,step 4000/12500, loss 1.769\n",
-      "Epoch 9/10,step 6000/12500, loss 1.568\n",
-      "Epoch 9/10,step 8000/12500, loss 1.868\n",
-      "Epoch 9/10,step 10000/12500, loss 1.850\n",
-      "Epoch 9/10,step 12000/12500, loss 1.551\n",
-      "Epoch 10/10,step 2000/12500, loss 1.854\n",
-      "Epoch 10/10,step 4000/12500, loss 1.708\n",
-      "Epoch 10/10,step 6000/12500, loss 0.788\n",
-      "Epoch 10/10,step 8000/12500, loss 1.387\n",
-      "Epoch 10/10,step 10000/12500, loss 1.272\n",
-      "Epoch 10/10,step 12000/12500, loss 0.562\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "source": [
     "with torch.no_grad():\r\n",
     "    n_correct = 0\r\n",
@@ -454,25 +415,7 @@
     "        print(f'Accuracy of {classes[i]}:{acc}')\r\n",
     "        "
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Accuracy is 56.58\n",
-      "Accuracy of plane:59.8\n",
-      "Accuracy of car:68.4\n",
-      "Accuracy of bird:41.5\n",
-      "Accuracy of cat:33.8\n",
-      "Accuracy of deer:35.8\n",
-      "Accuracy of dog:45.1\n",
-      "Accuracy of frog:75.9\n",
-      "Accuracy of horse:68.6\n",
-      "Accuracy of ship:75.8\n",
-      "Accuracy of truck:61.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
